samples/_failures_safe/1761712880_fcc34b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_567625f3.c: In function ‘main’:
./samples/SAFE/__tmp_567625f3.c:142:9: error: expected declaration or statement at end of input
  142 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_567625f3.c:142:9: error: expected declaration or statement at end of input
